--- a/upload.css
+++ b/upload.css
@@ -30,8 +30,11 @@
     -webkit-transform: scale(1) translatey(0);
             transform: scale(1) translatey(0); } }
 
-.vue-image-crop-upload {
+.vue-image-crop-upload.pos-fixed, .vue-image-crop-upload .vicp-wrap.pos-fixed {
   position: fixed;
+}
+
+.vue-image-crop-upload {
   display: block;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -48,7 +51,6 @@
   .vue-image-crop-upload .vicp-wrap {
     -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.23);
             box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.23);
-    position: fixed;
     display: block;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
